# MLE-STAR

./: .env.example  .gitignore  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
configs/: agents.yaml  logging.yaml  models.yaml
docs/: api_reference.md  architecture.md  security.md
examples/: custom_ml_task.py  kaggle_competition.py  mws_ai_agents_competition.py  quickstart.py
mle_star/agents/: executor.py  planner.py  verifier.py
mle_star/api/: client.py
mle_star/core/: base_agent.py  message.py  state_manager.py  workflow.py
mle_star/execution/: sandbox.py  validator.py
mle_star/integrations/: __init__.py  kaggle_api.py
mle_star/models/: base_model.py  local_model.py  model_pool.py  openrouter_client.py
mle_star/monitoring/: __init__.py  guardrails.py  logger.py  metrics.py  resource_monitor.py
mle_star/tasks/: kaggle_task.py  task.py
mle_star/utils/: config.py  data_profiler.py  prompt_templates.py
tests/: README.md  conftest.py
tests/integration/: test_workflow_integration.py
tests/unit/: test_kaggle_integration.py  test_message.py  test_monitoring.py  test_security.py
